...
            "state" : "translated",
            "value" : "アルバムアーティスト"
          }
        }
      }
    },
    "Albums" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "アルバム"
          }
...
            "state" : "translated",
            "value" : "内蔵プリセット"
          }
        }
      }
    },
    "Cancel" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "キャンセル"
          }
...
            "state" : "translated",
            "value" : "デフォルト"
          }
        }
      }
    },
    "Delete" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "削除"
          }
...
            "state" : "translated",
            "value" : "イコライザープリセットを削除しますか？"
          }
        }
      }
    },
    "Delete from Library" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ライブラリから削除"
          }
...
            "state" : "translated",
            "value" : "ライブラリから削除しますか？"
          }
        }
      }
    },
    "Delete Playlist" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "プレイリストを削除"
          }
...
            "state" : "translated",
            "value" : "歌詞を編集"
          }
        }
      }
    },
    "Edit Lyrics…" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "歌詞を編集…"
          }
...
            "state" : "translated",
            "value" : "弱"
          }
        }
      }
    },
    "Lyrics" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "歌詞"
          }
...
            "state" : "translated",
            "value" : "変更日"
          }
        }
      }
    },
    "Move Down" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "下へ移動"
          }
...
            "state" : "translated",
            "value" : "削除"
          }
        }
      }
    },
    "Remove from Playlist" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "プレイリストから削除"
          }
        }
      }
    },
    "Rename" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "名前を変更"
          }
...
